--- a/Treninzi.html
+++ b/Treninzi.html
@@ -1,6 +1,6 @@
 <html lang="en">
 <head>
-  <title>battleship-game</title>
+  <title>Treninzi</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://bootswatch.com/4/slate/bootstrap.css">
