--- a/Nutricionista.html
+++ b/Nutricionista.html
@@ -8,7 +8,37 @@
 
 </head>
 <body>
-
+  <nav class="navbar navbar-expand-lg navbar" style="background-color: #1D1E22">
+    <a class="navbar-brand" href="#" style="background-color: #1D1E22">
+        <img src="gym-assets/resizelogo.png" alt="" >
+      </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  
+    <div class="collapse navbar-collapse" id="navbarColor01" style="background-color: #1D1E22">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item ">
+          <a class="nav-link" href="#">Početna strana<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Usluge</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Moj nalog</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Zakazivanje treninga</a>
+        </li>
+      </ul>
+      <form class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="text" placeholder="USERNAME">
+        <input class="form-control mr-sm-2" type="text" placeholder="PASSWORD">
+        <button type="button" class="btn btn-warning" style="margin-right: 5px;">LOGIN</button>
+        <a href="#!" class="btn btn-danger btn-rounded">SIGN UP!</a>
+      </form>
+    </div>
+  </nav>
 <div class="container mt-4">
     <div class="jumbotron" style="background-image: url(gym-assets/nutrition.jpg)" style="position: relative;">
        <h1 class="display-3" style="text-align: center;">Nutricionista</h1>
