navbar not working

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           <button type="button" class="btn btn-outline-primary">EN</button>
         </div>
       </nav>
-
+    <!-- NAVBAR END -->
 
     <!-- Header -->
     <header id="header" class="header">
@@ -528,16 +528,13 @@
                         <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Navigacija</h5>
                         <ul class="list-unstyled">
                         <li>
-                        <a href="#!">Pocetna strana</a>
+                        <a href="index.html">Početna strana</a>
                         </li>
                         <li>
-                        <a href="#!">Usluge</a>
+                        <a href="Treninzi.html">Lista treninga</a>
                         </li>
                         <li>
-                        <a href="#!">Zakazivanje treninga</a>
-                        </li>
-                        <li>
-                        <a href="#!">Moj nalog</a>
+                        <a href="">Moj nalog</a>
                         </li>
                         </ul>
                     </div>
