--- a/YogaPodkategorije.html
+++ b/YogaPodkategorije.html
@@ -23,15 +23,15 @@
 
   <div class="collapse navbar-collapse" id="navbarColor01" style="background-color: #1D1E22">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
+      <li class="nav-item">
         <a class="nav-link" href="index.html">Početna strana<span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item dropdown">
+      <li class="nav-item dropdown  active">
           <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="" role="button" aria-haspopup="true" aria-expanded="false">Treninzi</a>
           <div class="dropdown-menu" style="">
           <a class="dropdown-item" href="Treninzi.html">Spisak treninga</a>
           <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="YogaPodkategorije.html">Yoga</a>
+            <a class="dropdown-item  active" href="YogaPodkategorije.html">Yoga</a>
             <a class="dropdown-item" href="PilatesPodkategorije.html">Pilates</a>
             <a class="dropdown-item" href="CorePodkategorije.html">Core</a>
             <a class="dropdown-item" href="CardioPodkategorije.html">Cardio</a>
@@ -67,8 +67,8 @@
       <input class="form-control mr-sm-2" type="text" placeholder="PASSWORD">
       <button type="button" class="btn btn-warning" style="margin-right: 5px;">LOGIN</button>
     </form>
-    <button type="button" class="btn btn-outline-primary">SR</button>
-    <button type="button" class="btn btn-outline-primary">EN</button>
+    <button type="button" class="btn btn-outline-primary" onclick="location.href='index.html';">SR</button>
+        <button type="button" class="btn btn-outline-primary" onclick="location.href='english_index.html';">EN</button>
   </div>
 </nav>
 <!-- NAVBAR END -->
@@ -84,7 +84,7 @@
                         Bikram, power joga…) mogu svrstati pod Hatha jogu.</p>
                   </div>
                   <div class="col-sm">
-                    <h2 class="display-3" style="text-align: center;">HATHA YOGA</h2>
+                    <h2 class="display-3" style="text-align: center;" id="HATHA">HATHA YOGA</h2>
                   </div>
                   <div class="col-sm"style="text-align: center;">
                    <h4 class="display-5" style="text-align: center;"> <b>SPECIFIKACIJA TRENINGA</b></h4>
@@ -135,7 +135,7 @@
                         <p class="text-justify" style="text-align: center; margin-top: 30px;">Reč Gjana znači znanje. Gjana joga je put znanja i filozofije.Proučavanjem, razmišljanjem, vežbanjem i praktičnim iskustvima, postižemo sposobnost razlikovanja stvarnog od nestvarnog i dostižemo najviše znanje – samospoznaju.Joga vuče korene iz tri najveće indijske filozofije: Tantre, Samkje i Vedante, koje su deo Sanatana Dharme.</p>
                       </div>
                       <div class="col-sm">
-                        <h2 class="display-3" style="text-align: center;">GJANA YOGA</h2>
+                        <h2 class="display-3" style="text-align: center;" id="GJANA">GJANA YOGA</h2>
                       </div>
                       <div class="col-sm"style="text-align: center;">
                        <h4 class="display-5" style="text-align: center;"> <b>SPECIFIKACIJA TRENINGA</b></h4>
@@ -184,7 +184,7 @@
                         <p class="text-justify" style="text-align: center; margin-top: 30px;">Karma joga se bavi uzrokom, delom i posledicom kroz nesebično služenje drugima. Reč karma znači činiti, delati. Svaka naša aktivnost – disanje, govor, kretanje, ali i svaka misao i svaka reč – sve je karma, delanje. Međutim, pojam karma označava i univerzalni zakon uzroka i posledice.</p>
                       </div>
                       <div class="col-sm">
-                        <h2 class="display-3" style="text-align: center;">KARMA YOGA</h2>
+                        <h2 class="display-3" style="text-align: center;" id="KARMA">KARMA YOGA</h2>
                       </div>
                       <div class="col-sm"style="text-align: center;">
                        <h4 class="display-5" style="text-align: center;"> <b>SPECIFIKACIJA TRENINGA</b></h4>
