--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
             <input class="form-control mr-sm-2" type="text" placeholder="PASSWORD">
             <button type="button" class="btn btn-warning" style="margin-right: 5px;">LOGIN</button>
           </form>
-          <button type="button" class="btn btn-outline-primary">SR</button>
-          <button type="button" class="btn btn-outline-primary">EN</button>
+          <button type="button" class="btn btn-outline-primary" onclick="location.href='index.html';">SR</button>
+          <button type="button" class="btn btn-outline-primary" onclick="location.href='english_index.html';">EN</button>
         </div>
       </nav>
     <!-- NAVBAR END -->
