--- a/Nutricionista.html
+++ b/Nutricionista.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://bootswatch.com/4/slate/bootstrap.css">
+  <link rel="stylesheet" href="css/modal.css">
 
 
 </head>
@@ -178,13 +179,45 @@
      <h3 style="text-align: center;">Da li si uspeo da odabereš nutricionistu?</h3>
      <hr class="my-4">
      <p class="lead" style="text-align: center;">
-     <button type="button" class="btn btn-success">Zakazivanje termina</button>
+      <a class="btn btn-success" href="#popup1">Zakazivanje termina</a>
      </p>
      </div>
   
 </div>
 
-
+<div id="popup1" class="overlay">
+	<div class="popup modal-content">
+		<h2>Zakazite termin</h2>
+		<a class="close" href="#">&times;</a>
+		<div class="content">
+      <div class="form-group">
+        <label for="formName">Ime</label>
+        <input type="text" class="form-control" placeholder="Unesite ime" id="formName">
+      </div>
+      <div class="form-group">
+        <label for="formSurname">Prezime</label>
+        <input type="text" class="form-control" placeholder="Unesite prezime" id="formSurname">
+      </div>
+			<div class="form-group">
+        <label for="formMail">Email</label>
+        <input type="email" class="form-control" id="formMail" aria-describedby="emailHelp" placeholder="Unesite adresu">
+      </div>
+      <div class="form-group">
+        <label for="formNumber">Kontakt telefon</label>
+        <input type="text" class="form-control" placeholder="Unesite broj" id="formNumber">
+      </div>
+      <div class="form-group">
+        <label for="formDate">Datum termina</label>
+        <input type="date" class="form-control" id="formDate" min="2020-01-01" max="2021-12-31">
+      </div>
+      <div class="form-group">
+        <label for="opisProblema">Kratak opis problema</label>
+        <textarea class="form-control" id="opisProblema" rows="3"></textarea>
+      </div>
+      <button class="btn btn-success" id="potvrda">Zakazi</button>
+		</div>
+	</div>
+</div>
 
  
   <!--FOOTER START-->
