--- a/CorePodkategorije.html
+++ b/CorePodkategorije.html
@@ -86,7 +86,7 @@
   </div>
   <div class="container mt-4" id="TRAININGContainer">
     <div id="KLASIKCContainer">
-      <div class="jumbotron" style="background-image: url(gym-assets/core.jpg)" style="position: relative;">
+      <div class="jumbotron" style="background-image: url(gym-assets/core.jpg); margin-bottom: 0;" style="position: relative;">
           <div class="container" >
               <div class="row">
                 <div class="col-sm" style="text-align: center;">
@@ -147,7 +147,7 @@
     </div> 
         
     <div id="HIITContainer">
-      <div class="jumbotron" style="background-image: url(gym-assets/core.jpg)" style="position: relative;">
+      <div class="jumbotron" style="background-image: url(gym-assets/core.jpg); margin-bottom: 0;" style="position: relative;">
           <div class="container" >
               <div class="row">
                 <div class="col-sm" style="text-align: center;">
@@ -207,7 +207,7 @@
     </div>
 
     <div id="KRUZNIContainer">
-      <div class="jumbotron" style="background-image: url(gym-assets/core.jpg)" style="position: relative;">
+      <div class="jumbotron" style="background-image: url(gym-assets/core.jpg); margin-bottom: 0;" style="position: relative;">
         <div class="container" >
             <div class="row">
               <div class="col-sm" style="text-align: center;">
