--- a/PilatesPodkategorije.html
+++ b/PilatesPodkategorije.html
@@ -145,7 +145,7 @@
     </div>
        
     <div id="STOTContainer">
-      <div class="jumbotron" style="background-image: url(gym-assets/pilates.jpg)" style="position: relative;">
+      <div class="jumbotron" style="background-image: url(gym-assets/pilates.jpg); margin-bottom: 0;" style="position: relative;">
           <div class="container" >
               <div class="row">
                 <div class="col-sm" style="text-align: center;">
@@ -204,7 +204,7 @@
     </div>
     
     <div id="REFORMERContainer">
-      <div class="jumbotron" style="background-image: url(gym-assets/pilates.jpg)" style="position: relative;">
+      <div class="jumbotron" style="background-image: url(gym-assets/pilates.jpg); margin-bottom: 0;" style="position: relative;">
         <div class="container" >
             <div class="row">
               <div class="col-sm" style="text-align: center;">
