--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 	<link href="css/magnific-popup.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
     <link rel="stylesheet" href="https://bootswatch.com/4/slate/bootstrap.css">
-	
+	<script src="js/storagePrimer.js"></script>
+    <script src="js/login.js"></script>
 	<!-- Favicon  -->
     <link rel="icon" href="images/favicon.png">
 </head>
@@ -56,15 +57,15 @@
       
         <div class="collapse navbar-collapse" id="navbarColor01" style="background-color: #1D1E22">
           <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
+            <li class="nav-item">
               <a class="nav-link" href="index.html">Početna strana<span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item dropdown">
+            <li class="nav-item dropdown  active">
                 <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="" role="button" aria-haspopup="true" aria-expanded="false">Treninzi</a>
                 <div class="dropdown-menu" style="">
                 <a class="dropdown-item" href="Treninzi.html">Spisak treninga</a>
                 <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="YogaPodkategorije.html">Yoga</a>
+                  <a class="dropdown-item  active" href="YogaPodkategorije.html">Yoga</a>
                   <a class="dropdown-item" href="PilatesPodkategorije.html">Pilates</a>
                   <a class="dropdown-item" href="CorePodkategorije.html">Core</a>
                   <a class="dropdown-item" href="CardioPodkategorije.html">Cardio</a>
@@ -96,14 +97,16 @@
            
           </ul>
           <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="text" placeholder="USERNAME">
-            <input class="form-control mr-sm-2" type="text" placeholder="PASSWORD">
-            <button type="button" class="btn btn-warning" style="margin-right: 5px;">LOGIN</button>
+            <input id="usernameField" class="form-control mr-sm-2" type="text" placeholder="USERNAME">
+            <input id="passwdField" class="form-control mr-sm-2" type="password" placeholder="PASSWORD">
+            <button id="loginButton" type="button" class="btn btn-warning" style="margin-right: 5px;">LOGIN</button>
+            <button id="logoutButton" type="button" class="btn btn-danger" style="margin-right: 5px;">LOGOUT</button>
+            <button id="registerButton" type="button" class="btn btn-success" style="margin-right: 5px;">REGISTER</button>
           </form>
           <button type="button" class="btn btn-outline-primary" onclick="location.href='index.html';">SR</button>
-          <button type="button" class="btn btn-outline-primary" onclick="location.href='english_index.html';">EN</button>
+              <button type="button" class="btn btn-outline-primary" onclick="location.href='english_index.html';">EN</button>
         </div>
-      </nav>
+    </nav>
     <!-- NAVBAR END -->
 
     <!-- Header -->
