--- a/PilatesPodkategorije.html
+++ b/PilatesPodkategorije.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://bootswatch.com/4/slate/bootstrap.css">
   <link rel="stylesheet" href="podkategorije-style.css">
+  <link rel="stylesheet" href="css/rating.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
@@ -108,7 +109,12 @@
                 <h4 class="display-5" style="text-align: center; margin-top: 10px; margin-bottom:30px ;">težina</h4>
                 <div class="progress">
                     <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 40%"></div>
-                  </div>
+                </div>
+                <br>
+                <div data-training="KLASIKP" style="font-size: 2em" data-type="rating">4.7</div>
+                <div class="rating" data-training="KLASIKP" style="font-size: 2em">
+                  <span data-type="star" data-starindex="5">☆</span><span data-type="star" data-starindex="4">☆</span><span data-type="star" data-starindex="3">☆</span><span data-type="star" data-starindex="2">☆</span><span data-type="star" data-starindex="1">☆</span>
+                </div>
               </div>
             </div>
           </div>
@@ -174,7 +180,12 @@
                   <h4 class="display-5" style="text-align: center; margin-top: 10px; margin-bottom:30px ;">težina</h4>
                   <div class="progress">
                       <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%"></div>
-                    </div>
+                  </div>
+                  <br>
+                  <div data-training="STOT" style="font-size: 2em" data-type="rating">4.7</div>
+                  <div class="rating" data-training="STOT" style="font-size: 2em">
+                    <span data-type="star" data-starindex="5">☆</span><span data-type="star" data-starindex="4">☆</span><span data-type="star" data-starindex="3">☆</span><span data-type="star" data-starindex="2">☆</span><span data-type="star" data-starindex="1">☆</span>
+                  </div>
                 </div>
               </div>
             </div>
@@ -208,9 +219,9 @@
         <div data-type="komentari" data-training="STOT"></div>
       </div>
 
-      <a href="#KARMAtermini" data-toggle="collapse"><div class="card-header"><div style="display: inline;">Termini</div>&nbsp<div data-type="loginAlert" style="display: inline; color: red;">(Ulogujte se kako biste rezervisali termin!)</div></div></a>
-      <div id="KARMAtermini" class="collapse card-body">
-        <table class="table table-bordered" data-type="termini" data-training="KARMA" style="width: 100%;">
+      <a href="#STOTtermini" data-toggle="collapse"><div class="card-header"><div style="display: inline;">Termini</div>&nbsp<div data-type="loginAlert" style="display: inline; color: red;">(Ulogujte se kako biste rezervisali termin!)</div></div></a>
+      <div id="STOTtermini" class="collapse card-body">
+        <table class="table table-bordered" data-type="termini" data-training="STOT" style="width: 100%;">
           
         </table>
       </div>
@@ -240,7 +251,12 @@
                 <h4 class="display-5" style="text-align: center; margin-top: 10px; margin-bottom:30px ;">težina</h4>
                 <div class="progress">
                     <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 85%"></div>
-                  </div>
+                </div>
+                <br>
+                <div data-training="REFORMER" style="font-size: 2em" data-type="rating">4.7</div>
+                <div class="rating" data-training="REFORMER" style="font-size: 2em">
+                  <span data-type="star" data-starindex="5">☆</span><span data-type="star" data-starindex="4">☆</span><span data-type="star" data-starindex="3">☆</span><span data-type="star" data-starindex="2">☆</span><span data-type="star" data-starindex="1">☆</span>
+                </div>
               </div>
             </div>
           </div>
