--- a/YogaPodkategorije.html
+++ b/YogaPodkategorije.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://bootswatch.com/4/slate/bootstrap.css">
   <link rel="stylesheet" href="podkategorije-style.css">
+  <link rel="stylesheet" href="css/rating.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
@@ -108,7 +109,12 @@
                     <h4 class="display-5" style="text-align: center; margin-top: 10px; margin-bottom:30px ;">težina</h4>
                     <div class="progress">
                         <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
-                      </div>
+                    </div>
+                    <br>
+                    <div data-training="HATHA" style="font-size: 2em" data-type="rating">4.7</div>
+                    <div class="rating" data-training="HATHA" style="font-size: 2em">
+                      <span data-type="star" data-starindex="5">☆</span><span data-type="star" data-starindex="4">☆</span><span data-type="star" data-starindex="3">☆</span><span data-type="star" data-starindex="2">☆</span><span data-type="star" data-starindex="1">☆</span>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -173,7 +179,12 @@
                   <h4 class="display-5" style="text-align: center; margin-top: 10px; margin-bottom:30px ;">težina</h4>
                   <div class="progress">
                       <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%"></div>
-                    </div>
+                  </div>
+                  <br>
+                  <div data-training="GJANA" style="font-size: 2em" data-type="rating">4.7</div>
+                  <div class="rating" data-training="GJANA" style="font-size: 2em">
+                    <span data-type="star" data-starindex="5">☆</span><span data-type="star" data-starindex="4">☆</span><span data-type="star" data-starindex="3">☆</span><span data-type="star" data-starindex="2">☆</span><span data-type="star" data-starindex="1">☆</span>
+                  </div>
                 </div>
               </div>
             </div>
@@ -239,7 +250,12 @@
                   <h4 class="display-5" style="text-align: center; margin-top: 10px; margin-bottom:30px ;">težina</h4>
                   <div class="progress">
                       <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 85%"></div>
-                    </div>
+                  </div>
+                  <br>
+                  <div data-training="KARMA" style="font-size: 2em" data-type="rating">4.7</div>
+                  <div class="rating" data-training="KARMA" style="font-size: 2em">
+                    <span data-type="star" data-starindex="5">☆</span><span data-type="star" data-starindex="4">☆</span><span data-type="star" data-starindex="3">☆</span><span data-type="star" data-starindex="2">☆</span><span data-type="star" data-starindex="1">☆</span>
+                  </div>
                 </div>
               </div>
             </div>
