--- a/Nutricionista.html
+++ b/Nutricionista.html
@@ -5,7 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://bootswatch.com/4/slate/bootstrap.css">
   <link rel="stylesheet" href="css/modal.css">
-
+  <script src="js/jspdf.min.js"></script>
+  <script src="js/jspdf.plugin.autotable.js"></script>
+  <script src="js/savePDF.js"></script>
 
 </head>
 <body>
@@ -241,31 +243,34 @@
       <h2>Zakazite termin</h2>
       <a class="close" href="#">&times;</a>
       <div class="content">
-        <div class="form-group">
-          <label for="formName">Ime</label>
-          <input type="text" class="form-control" placeholder="Unesite ime" id="formName">
+        <form name="onlyForm">
+          <div class="form-group">
+            <label for="formName">Ime</label>
+            <input type="text" class="form-control" placeholder="Unesite ime" id="formName">
+          </div>
+          <div class="form-group">
+            <label for="formSurname">Prezime</label>
+            <input type="text" class="form-control" placeholder="Unesite prezime" id="formSurname">
+          </div>
+          <div class="form-group">
+            <label for="formMail">Email</label>
+            <input type="email" class="form-control" id="formMail" aria-describedby="emailHelp" placeholder="Unesite adresu">
+          </div>
+          <div class="form-group">
+            <label for="formNumber">Kontakt telefon</label>
+            <input type="text" class="form-control" placeholder="Unesite broj" id="formNumber">
+          </div>
+          <div class="form-group">
+            <label for="formDate">Datum termina</label>
+            <input type="date" class="form-control" id="formDate" min="2020-01-01" max="2021-12-31">
+          </div>
+          <div class="form-group">
+            <label for="opisProblema">Kratak opis problema</label>
+            <textarea class="form-control" id="opisProblema" rows="3"></textarea>
+          </div>
+          <button class="btn btn-success" id="potvrdaForme">Zakazi</button>
         </div>
-        <div class="form-group">
-          <label for="formSurname">Prezime</label>
-          <input type="text" class="form-control" placeholder="Unesite prezime" id="formSurname">
-        </div>
-        <div class="form-group">
-          <label for="formMail">Email</label>
-          <input type="email" class="form-control" id="formMail" aria-describedby="emailHelp" placeholder="Unesite adresu">
-        </div>
-        <div class="form-group">
-          <label for="formNumber">Kontakt telefon</label>
-          <input type="text" class="form-control" placeholder="Unesite broj" id="formNumber">
-        </div>
-        <div class="form-group">
-          <label for="formDate">Datum termina</label>
-          <input type="date" class="form-control" id="formDate" min="2020-01-01" max="2021-12-31">
-        </div>
-        <div class="form-group">
-          <label for="opisProblema">Kratak opis problema</label>
-          <textarea class="form-control" id="opisProblema" rows="3"></textarea>
-        </div>
-        <button class="btn btn-success" id="potvrda">Zakazi</button>
+        
       </div>
     </div>
   </div>
