--- a/Nutricionista.html
+++ b/Nutricionista.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://bootswatch.com/4/slate/bootstrap.css">
   <link rel="stylesheet" href="css/modal.css">
+  <script src="js/storagePrimer.js"></script>
   <script src="js/jspdf.min.js"></script>
   <script src="js/jspdf.plugin.autotable.js"></script>
   <script src="js/savePDF.js"></script>
