--- a/MojNalog.html
+++ b/MojNalog.html
@@ -11,6 +11,7 @@
     <script src="js/storagePrimer.js"></script>
     <script src="js/login.js"></script>
     <script src="js/mojnalog.js"></script>
+    <script src="js/training.js"></script>
 </head>
 <body>
      <!--NAVBAR-->
