--- a/english_register.html
+++ b/english_register.html
@@ -73,20 +73,20 @@
 <div class="container mt-4" >
     <div class="jumbotron" style="background-image: url(gym-assets/yoga.jpg)" style="position: relative; padding-bottom: 101px;">
         <div style="text-align: center;">
-            <h2>Unesite podatke za registraciju!</h2>
+            <h2>Enter registration information!</h2>
             <hr>
             <div class="content">
               <form name="onlyForm">
                 <div class="form-group">
                   <label for="formName">USERNAME</label>
-                  <input type="text" class="form-control" placeholder="Unesite korisničko ime" id="formusername" style="width: 30%;margin-left: auto;margin-right: auto;">
+                  <input type="text" class="form-control" placeholder="Enter a username" id="formusernameen" style="width: 30%;margin-left: auto;margin-right: auto;">
                 </div>
                 <div class="form-group">
                   <label for="formSurname">PASSWORD</label>
-                  <input type="text" class="form-control" placeholder="Unesite lozinku" id="formpw" style="width: 30%;margin-left: auto;margin-right: auto;">
+                  <input type="text" class="form-control" placeholder="Enter your password" id="formpwen" style="width: 30%;margin-left: auto;margin-right: auto;">
                 </div>              
               
-                <button id="registerbtn" type="button" class="btn btn-warning" onclick="register(document.getElementById('formusername').value,document.getElementById('formpw').value)">REGISTRUJ SE!</button>
+                <button id="registerbtn" type="button" class="btn btn-warning" onclick="register(document.getElementById('formusernameen').value,document.getElementById('formpwen').value)">REGISTER!</button>
               </div>
               
             </div>
