--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
               </li>
              
             <li class="nav-item">
-              <a class="nav-link" href="#">Moj nalog</a>
+              <a class="nav-link" href="MojNalog.html">Moj nalog</a>
             </li>
-            <button type="button" class="btn btn-outline-danger">REGISTRUJ SE!</button>
+            <a id="registerButtonRedirect" href="Register.html"><button type="button" class="btn btn-outline-danger">REGISTRUJ SE!</button></a>
            
           </ul>
           <form class="form-inline my-2 my-lg-0">
@@ -101,12 +101,11 @@
             <input id="passwdField" class="form-control mr-sm-2" type="password" placeholder="PASSWORD">
             <button id="loginButton" type="button" class="btn btn-warning" style="margin-right: 5px;">LOGIN</button>
             <button id="logoutButton" type="button" class="btn btn-danger" style="margin-right: 5px;">LOGOUT</button>
-            <button id="registerButton" type="button" class="btn btn-success" style="margin-right: 5px;">REGISTER</button>
           </form>
           <button type="button" class="btn btn-outline-primary" onclick="location.href='index.html';">SR</button>
               <button type="button" class="btn btn-outline-primary" onclick="location.href='english_index.html';">EN</button>
         </div>
-    </nav>
+      </nav>
     <!-- NAVBAR END -->
 
     <!-- Header -->
