--- a/CorePodkategorije.html
+++ b/CorePodkategorije.html
@@ -60,7 +60,7 @@
           </li>
          
         <li class="nav-item">
-          <a class="nav-link" href="MojNalog.html">Moj nalog</a>
+          <a id="MojNalogDugme" class="nav-link" href="MojNalog.html">Moj nalog</a>
         </li>
         <a id="registerButtonRedirect" href="Register.html"><button type="button" class="btn btn-outline-danger">REGISTRUJ SE!</button></a>
        
