--- a/MojNalog.html
+++ b/MojNalog.html
@@ -15,7 +15,7 @@
 </head>
 <body>
      <!--NAVBAR-->
-    <nav class="navbar navbar-expand-lg navbar" style="background-color: #1D1E22">
+  <nav class="navbar navbar-expand-lg navbar" style="background-color: #1D1E22">
     <a class="navbar-brand" href="index.html" style="background-color: #1D1E22">
         <img src="gym-assets/resizelogo.png" alt="" >
       </a>
@@ -59,7 +59,7 @@
           </li>
           
         <li class="nav-item">
-          <a class="nav-link" href="MojNalog.html">Moj nalog</a>
+          <a id="MojNalogDugme" class="nav-link" href="MojNalog.html">Moj nalog</a>
         </li>
         <a id="registerButtonRedirect" href="Register.html"><button type="button" class="btn btn-outline-danger">REGISTRUJ SE!</button></a>
         
