--- a/Masaze.html
+++ b/Masaze.html
@@ -28,32 +28,31 @@
         <li class="nav-item">
           <a class="nav-link" href="index.html">Početna strana<span class="sr-only">(current)</span></a>
         </li>
-        <li class="nav-item dropdown  active">
+        <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="" role="button" aria-haspopup="true" aria-expanded="false">Treninzi</a>
             <div class="dropdown-menu" style="">
             <a class="dropdown-item" href="Treninzi.html">Spisak treninga</a>
             <div class="dropdown-divider"></div>
-              <a class="dropdown-item  active" href="YogaPodkategorije.html">Yoga</a>
+              <a class="dropdown-item" href="YogaPodkategorije.html">Yoga</a>
               <a class="dropdown-item" href="PilatesPodkategorije.html">Pilates</a>
               <a class="dropdown-item" href="CorePodkategorije.html">Core</a>
               <a class="dropdown-item" href="CardioPodkategorije.html">Cardio</a>
               
             </div>
           </li>
-          <li class="nav-item dropdown">
+          <li class="nav-item dropdown active">
             <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="" role="button" aria-haspopup="true" aria-expanded="false">Usluge</a>
             <div class="dropdown-menu" style="">
               <a class="dropdown-item" href="Nutricionista.html">Pregled nutricionista</a>
-              <a class="dropdown-item" href="Masaze.html">Pregled masaži</a>
+              <a class="dropdown-item active" href="Masaze.html">Pregled masaži</a>
               <div class="dropdown-divider"></div>
             </div>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="" role="button" aria-haspopup="true" aria-expanded="false">Zakazivanje usluga</a>
             <div class="dropdown-menu" style="">
-              <a class="dropdown-item" href="">Zakaži trening</a>
-              <a class="dropdown-item" href="">Zakaži masažu</a>
-              <a class="dropdown-item" href="">Zakaži nutricionistu</a>
+              <a class="dropdown-item" href="Masaze.html#popup1">Zakaži masažu</a>
+              <a class="dropdown-item" href="Nutricionista.html#popup1">Zakaži nutricionistu</a>
               <div class="dropdown-divider"></div>
             </div>
           </li>
