--- a/MojNalog.html
+++ b/MojNalog.html
@@ -28,12 +28,12 @@
         <li class="nav-item">
           <a class="nav-link" href="index.html">Početna strana<span class="sr-only">(current)</span></a>
         </li>
-        <li class="nav-item dropdown  active">
+        <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="" role="button" aria-haspopup="true" aria-expanded="false">Treninzi</a>
             <div class="dropdown-menu" style="">
             <a class="dropdown-item" href="Treninzi.html">Spisak treninga</a>
             <div class="dropdown-divider"></div>
-              <a class="dropdown-item  active" href="YogaPodkategorije.html">Yoga</a>
+              <a class="dropdown-item" href="YogaPodkategorije.html">Yoga</a>
               <a class="dropdown-item" href="PilatesPodkategorije.html">Pilates</a>
               <a class="dropdown-item" href="CorePodkategorije.html">Core</a>
               <a class="dropdown-item" href="CardioPodkategorije.html">Cardio</a>
@@ -51,14 +51,13 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="" role="button" aria-haspopup="true" aria-expanded="false">Zakazivanje usluga</a>
             <div class="dropdown-menu" style="">
-              <a class="dropdown-item" href="">Zakaži trening</a>
-              <a class="dropdown-item" href="">Zakaži masažu</a>
-              <a class="dropdown-item" href="">Zakaži nutricionistu</a>
+              <a class="dropdown-item" href="Masaze.html#popup1">Zakaži masažu</a>
+                  <a class="dropdown-item" href="Nutricionista.html#popup1">Zakaži nutricionistu</a>
               <div class="dropdown-divider"></div>
             </div>
           </li>
           
-        <li class="nav-item">
+        <li class="nav-item active">
           <a id="MojNalogDugme" class="nav-link" href="MojNalog.html">Moj nalog</a>
         </li>
         <a id="registerButtonRedirect" href="Register.html"><button type="button" class="btn btn-outline-danger">REGISTRUJ SE!</button></a>
@@ -131,9 +130,6 @@
                     <li>
                     <a href="Treninzi.html">Lista treninga</a>
                     </li>
-                    <li>
-                    <a href="">Moj nalog</a>
-                    </li>
                     </ul>
                 </div>
             </div>        
@@ -145,7 +141,7 @@
             <h5 class="mb-1">Registruj se besplatno!</h5>
           </li>
           <li class="list-inline-item">
-            <a href="#!" class="btn btn-danger btn-rounded">SIGN UP</a>
+            <a href="Register.html" class="btn btn-danger btn-rounded">SIGN UP</a>
           </li>
         </ul>       
         <hr>
