--- a/PilatesPodkategorije.html
+++ b/PilatesPodkategorije.html
@@ -35,8 +35,8 @@
             <div class="dropdown-menu" style="">
             <a class="dropdown-item" href="Treninzi.html">Spisak treninga</a>
             <div class="dropdown-divider"></div>
-              <a class="dropdown-item  active" href="YogaPodkategorije.html">Yoga</a>
-              <a class="dropdown-item" href="PilatesPodkategorije.html">Pilates</a>
+              <a class="dropdown-item" href="YogaPodkategorije.html">Yoga</a>
+              <a class="dropdown-item active" href="PilatesPodkategorije.html">Pilates</a>
               <a class="dropdown-item" href="CorePodkategorije.html">Core</a>
               <a class="dropdown-item" href="CardioPodkategorije.html">Cardio</a>
               
@@ -53,9 +53,8 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="" role="button" aria-haspopup="true" aria-expanded="false">Zakazivanje usluga</a>
             <div class="dropdown-menu" style="">
-              <a class="dropdown-item" href="">Zakaži trening</a>
-              <a class="dropdown-item" href="">Zakaži masažu</a>
-              <a class="dropdown-item" href="">Zakaži nutricionistu</a>
+              <a class="dropdown-item" href="Masaze.html#popup1">Zakaži masažu</a>
+              <a class="dropdown-item" href="Nutricionista.html#popup1">Zakaži nutricionistu</a>
               <div class="dropdown-divider"></div>
             </div>
           </li>
@@ -326,9 +325,7 @@
                   <li>
                   <a href="Treninzi.html">Lista treninga</a>
                   </li>
-                  <li>
-                  <a href="">Moj nalog</a>
-                  </li>
+                  
                   </ul>
               </div>
           </div>        
@@ -340,7 +337,7 @@
           <h5 class="mb-1">Registruj se besplatno!</h5>
         </li>
         <li class="list-inline-item">
-          <a href="#!" class="btn btn-danger btn-rounded">SIGN UP</a>
+          <a href="Register.html" class="btn btn-danger btn-rounded">SIGN UP</a>
         </li>
       </ul>       
       <hr>
