--- a/YogaPodkategorije.html
+++ b/YogaPodkategorije.html
@@ -29,7 +29,7 @@
       <li class="nav-item">
         <a class="nav-link" href="index.html">Početna strana<span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item dropdown  active">
+      <li class="nav-item dropdown active">
           <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="" role="button" aria-haspopup="true" aria-expanded="false">Treninzi</a>
           <div class="dropdown-menu" style="">
           <a class="dropdown-item" href="Treninzi.html">Spisak treninga</a>
@@ -52,9 +52,8 @@
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="" role="button" aria-haspopup="true" aria-expanded="false">Zakazivanje usluga</a>
           <div class="dropdown-menu" style="">
-            <a class="dropdown-item" href="">Zakaži trening</a>
-            <a class="dropdown-item" href="">Zakaži masažu</a>
-            <a class="dropdown-item" href="">Zakaži nutricionistu</a>
+            <a class="dropdown-item" href="Masaze.html#popup1">Zakaži masažu</a>
+            <a class="dropdown-item" href="Nutricionista.html#popup1">Zakaži nutricionistu</a>
             <div class="dropdown-divider"></div>
           </div>
         </li>
@@ -332,9 +331,6 @@
                   <li>
                   <a href="Treninzi.html">Lista treninga</a>
                   </li>
-                  <li>
-                  <a href="">Moj nalog</a>
-                  </li>
                   </ul>
               </div>
           </div>        
@@ -346,7 +342,7 @@
           <h5 class="mb-1">Registruj se besplatno!</h5>
         </li>
         <li class="list-inline-item">
-          <a href="#!" class="btn btn-danger btn-rounded">SIGN UP</a>
+          <a href="Register.html" class="btn btn-danger btn-rounded">SIGN UP</a>
         </li>
       </ul>       
       <hr>
