--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <script src="js/login.js"></script>
 	<!-- Favicon  -->
     <link rel="icon" href="images/favicon.png">
-</head>
+    </head>
 <body data-spy="scroll" data-target=".fixed-top">
     
     <!-- Preloader -->
@@ -57,15 +57,15 @@
       
         <div class="collapse navbar-collapse" id="navbarColor01" style="background-color: #1D1E22">
           <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
+            <li class="nav-item active">
               <a class="nav-link" href="index.html">Početna strana<span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item dropdown  active">
+            <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="" role="button" aria-haspopup="true" aria-expanded="false">Treninzi</a>
                 <div class="dropdown-menu" style="">
                 <a class="dropdown-item" href="Treninzi.html">Spisak treninga</a>
                 <div class="dropdown-divider"></div>
-                  <a class="dropdown-item  active" href="YogaPodkategorije.html">Yoga</a>
+                  <a class="dropdown-item" href="YogaPodkategorije.html">Yoga</a>
                   <a class="dropdown-item" href="PilatesPodkategorije.html">Pilates</a>
                   <a class="dropdown-item" href="CorePodkategorije.html">Core</a>
                   <a class="dropdown-item" href="CardioPodkategorije.html">Cardio</a>
@@ -83,9 +83,8 @@
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="" role="button" aria-haspopup="true" aria-expanded="false">Zakazivanje usluga</a>
                 <div class="dropdown-menu" style="">
-                  <a class="dropdown-item" href="">Zakaži trening</a>
-                  <a class="dropdown-item" href="">Zakaži masažu</a>
-                  <a class="dropdown-item" href="">Zakaži nutricionistu</a>
+                  <a class="dropdown-item" href="Masaze.html#popup1">Zakaži masažu</a>
+                  <a class="dropdown-item" href="Nutricionista.html#popup1">Zakaži nutricionistu</a>
                   <div class="dropdown-divider"></div>
                 </div>
               </li>
@@ -117,8 +116,9 @@
                         <div class="text-container">
                             <h1>IRON GYM <br> TERETANA ZA<br> <span id="js-rotating" style="color:#F48B07">POČETNIKE I REKREATIVCE, PROFESIONALCE I TAKMIČARE </span></h1>
                             <p class="p-large">Preuzmite odgovornost za svoje telo. Ključ za promenu života je doslednost, ključ za doslednost je motivacija, a ključ za motivaciju je Vaš cilj.</p>
-                            <a class="btn-solid-lg page-scroll" href="#your-link"style="background-color:#F48B07; border:#F48B07;">TRENINZI</a>
-                            <a class="btn-solid-lg page-scroll" href="#your-link"style="background-color:#F48B07;border:#F48B07;">MOJ NALOG</a>
+                            <a href="Treninzi.html"><button type="button" class="btn btn-success">TRENINZI</button></a>
+                            <a href="Nutricionista.html"><button type="button" class="btn btn-danger">NUTRICIONISTA</button></a>
+                            <a href="Masaze.html"><button type="button" class="btn btn-warning">MASAŽE</button></a>
                         </div>
                     </div> <!-- end of col -->
                     <div class="col-lg-6">
@@ -369,7 +369,7 @@
                     <!-- Video Preview -->
                     <div class="image-container">
                         <div class="video-wrapper">
-                            <a class="popup-youtube" href="https://www.youtube.com/watch?v=fLCjQJCekTs" data-effect="fadeIn">
+                            <a class="popup-youtube" href="https://www.youtube.com/watch?v=a4BTnKMgbBc" data-effect="fadeIn">
                                 <img class="img-fluid" src="gym-assets\indexImages\video-frame.jpg" alt="alternative">
                                 <span class="video-play-button">
                                     <span></span>
@@ -492,8 +492,13 @@
                             <div class="help-block with-errors"></div>
                         </div>
                         <div class="form-group">
+                            <input type="text" class="form-control-input" id="cname" required>
+                            <label class="label-control" for="cname">Prezime</label>
+                            <div class="help-block with-errors"></div>
+                        </div>
+                        <div class="form-group">
                             <input type="email" class="form-control-input" id="cemail" required>
-                            <label class="label-control" for="cemail">Prezime</label>
+                            <label class="label-control" for="cemail">Vaš mail</label>
                             <div class="help-block with-errors"></div>
                         </div>
                         <div class="form-group">
@@ -502,7 +507,7 @@
                             <div class="help-block with-errors"></div>
                         </div>
                         <div class="form-group">
-                            <button type="submit" class="form-control-submit-button" style="background-color:#F48B07; border:#F48B07;">SUBMIT MESSAGE</button>
+                            <button type="button" class="btn btn-warning" style="width: 100%;">Pošalji poruku!</button>
                         </div>
                         <div class="form-message">
                             <div id="cmsgSubmit" class="h3 text-center hidden"></div>
@@ -544,9 +549,6 @@
                         <li>
                         <a href="Treninzi.html">Lista treninga</a>
                         </li>
-                        <li>
-                        <a href="">Moj nalog</a>
-                        </li>
                         </ul>
                     </div>
                 </div>        
@@ -558,7 +560,7 @@
                 <h5 class="mb-1">Registruj se besplatno!</h5>
               </li>
               <li class="list-inline-item">
-                <a href="#!" class="btn btn-danger btn-rounded">SIGN UP</a>
+                <a href="Register.html" class="btn btn-danger btn-rounded">SIGN UP</a>
               </li>
             </ul>       
             <hr>
