--- a/PilatesPodkategorije.html
+++ b/PilatesPodkategorije.html
@@ -7,6 +7,17 @@
   <link rel="stylesheet" href="podkategorije-style.css">
   <link rel="stylesheet" href="css/rating.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700,700i" rel="stylesheet">
+  <link href="css/bootstrap.css" rel="stylesheet">
+  <link href="css/fontawesome-all.css" rel="stylesheet">
+  <link href="css/swiper.css" rel="stylesheet">
+  <link href="css/magnific-popup.css" rel="stylesheet">
+  <link href="css/styles.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://bootswatch.com/4/slate/bootstrap.css">
+
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <script src="js/storagePrimer.js"></script>
@@ -141,6 +152,42 @@
           <a class="right" onclick="nextSlide(1)">❯</a>  
         </div> 
       </div>
+
+      <a href="#TRCANJEvideogalerija" data-toggle="collapse"><div class="card-header">Video galerija</div></a>
+      <div id="TRCANJEvideogalerija" class="collapse card-body">
+        <div class="slidercontainer">  
+          <!-- Video -->
+    <div id="preview" class="basic-1" style="background-image: url(gym-assets/indexImages/download-background.jpg);" >
+      <div class="container">
+          <div class="row">
+              <div class="col-lg-12">
+
+                  <!-- Video Preview -->
+                  <div class="image-container">
+                      <div class="video-wrapper">
+                          <a id="video" class="popup-youtube" href="https://www.youtube.com/watch?v=n4I_fmegTRk" data-effect="fadeIn">
+                              <img id="videoimg" class="img-fluid" src="gym-assets\indexImages\video-frame.jpg" alt="alternative">
+                              <span class="video-play-button">
+                                  <span></span>
+                              </span>
+                          </a>
+                      </div> <!-- end of video-wrapper -->
+                 
+                  </div> <!-- end of image-container -->
+                  <!-- end of video preview -->
+
+              </div> <!-- end of col -->
+          </div> <!-- end of row -->
+      </div> <!-- end of container -->
+  </div> <!-- end of basic-1 -->
+  <!-- end of video -->
+
+<!-- Navigation arrows -->  
+<a class="left" onclick="nextVideo(-1)">❮</a>  
+<a class="right" onclick="nextVideo(1)">❯</a>  
+        </div>
+      </div>
+
       <a href="#KLASIKPkomentari" data-toggle="collapse"><div class="card-header"><div style="display: inline;">Komentari</div>&nbsp<div data-type="loginAlert" style="display: inline; color: red;">(Ulogujte se kako biste ostavili komentar!)</div></div></a>
       <div id="KLASIKPkomentari" class="collapse card-body">
         <div data-type="komentari" data-training="KLASIKP"></div>
@@ -239,7 +286,7 @@
                 </p>
               </div>
               <div class="col-sm">
-                <h2 class="display-3" style="text-align: center;"id = "REFORMER">REFORMER PILATES</h2>
+                <h2 class="display-3" style="text-align: center;"id = "REFORMER">REFORM PILATES</h2>
               </div>
               <div class="col-sm"style="text-align: center;">
                 <h4 class="display-5" style="text-align: center;"> <b>SPECIFIKACIJA TRENINGA</b></h4>
@@ -347,12 +394,17 @@
 </div>
 <!--FOOTER END-->
 <script src="podkategorije-javascript.js"></script>   
- <!-- Scripts -->
- <script src="js/jquery.min.js"></script> <!-- jQuery for Bootstrap's JavaScript plugins -->
- <script src="js/popper.min.js"></script> <!-- Popper tooltip library for Bootstrap -->
- <script src="js/bootstrap.min.js"></script> <!-- Bootstrap framework -->
- <script src="js/jquery.easing.min.js"></script> <!-- jQuery Easing for smooth scrolling between anchors -->
- <script src="js/swiper.min.js"></script> <!-- Swiper for image and text sliders -->
- <script src="js/scripts.js"></script> <!-- Custom scripts -->
-<script src="podkategorije-javascript.js"></script>   
+  <!-- Scripts -->
+  <script src="js/jquery.min.js"></script> <!-- jQuery for Bootstrap's JavaScript plugins -->
+  <script src="js/popper.min.js"></script> <!-- Popper tooltip library for Bootstrap -->
+  <script src="js/bootstrap.min.js"></script> <!-- Bootstrap framework -->
+  <script src="js/jquery.easing.min.js"></script> <!-- jQuery Easing for smooth scrolling between anchors -->
+  <script src="js/swiper.min.js"></script> <!-- Swiper for image and text sliders -->
+  <script src="js/scripts.js"></script> <!-- Custom scripts -->
+ 
+  <!-- Scripts -->
+  <script src="js/jquery.magnific-popup.js"></script> <!-- Magnific Popup for lightboxes -->
+  <script src="js/morphext.min.js"></script> <!-- Morphtext rotating text in the header -->
+  <script src="js/validator.min.js"></script> <!-- Validator.js - Bootstrap plugin that validates forms -->
+  <script src="js/scripts.js"></script> <!-- Custom scripts -->
 </body>
